// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment queries 3 Should receive all comments for one product 1`] = `
Array [
  Object {
    "message": "COMMENT_NOT_FOUND",
    "statusCode": 404,
  },
]
`;

exports[`Comment queries 6 should return error when find comment by wrong id 1`] = `
Object {
  "message": "COMMENT_NOT_FOUND",
  "statusCode": 404,
}
`;
